# convert_nn

./: .gitignore  Cargo.toml  README.md  mnist_sample.py  pyproject.toml
src/: lib.rs  main.rs
